2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-30	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: New file.

2006-10-24	Joel Sherrill <joel@OARcorp.com>

	* shared/start/start.S: Eliminate hi, lo, HI, LO, and MK_BMSK.

2006-10-24	Alain Schaefer <alani@easc.ch>

	* configure.ac, eZKit533/configure.ac, eZKit533/include/bsp.h,
	shared/start/start.S: Make use of separated bfin helper .h files.

2006-06-05  Alain Schaefer <alani@easc.ch>

    * all files : Initial copy and port from no_cpu 